guestbook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: guestbook
  name: guestbook
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: guestbook
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guestbook
    spec:
      volumes:
        - name: service-account-credentials-volume
          secret:
            secretName: my-data-service-account-credentials
            items:
            - key: sa_json
              path: sa_credentials.json        
      containers:
        - image: ghcr.io/bfritscher/gcp_gb:green
          imagePullPolicy: Always
          name: guestbook
          volumeMounts:
            - name: service-account-credentials-volume
              mountPath: /etc/gcp
              readOnly: true        
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
