guestbook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
     app.kubernetes.io/name: guestbook
  sessionAffinity: None
  type: LoadBalancer
