guestbook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    networking.gke.io/managed-certificates: my-ssl-cert
spec:
  tls:
  - hosts:
    - "gb-heg.duckdns.org"
    secretName: my-ssl-cert
  rules:
  - host: "gb-heg.duckdns.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: guestbook
            port:
              number: 5000
